--- a/package.json
+++ b/package.json
@@ -1,27 +1,20 @@
 {
-  "name": "scraping-news",
+  "name": "mongoose_skeleton",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/thesidbatra/scraping-news.git"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/thesidbatra/scraping-news/issues"
-  },
-  "homepage": "https://github.com/thesidbatra/scraping-news#readme",
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.18.0",
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
-    "express-handlebars": "^3.1.0",
-    "mongoose": "^5.6.9",
+    "mongoose": "^5.6.8",
     "morgan": "^1.9.1"
   }
 }
